--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
+
 {
   "name": "tm-mini-vue",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "lib/guide-mini-vue.cjs.js",
+  "module": "lib/guide-mini-vue.esm.js",
   "author": "TomLongJoy <471727371@qq.com>",
   "license": "MIT",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "rollup -c rollup.config.mjs"
   },
   "devDependencies": {
     "@babel/core": "^7.22.10",
     "@babel/preset-env": "^7.22.10",
     "@babel/preset-typescript": "^7.22.5",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/jest": "^29.5.3",
     "babel-jest": "^29.6.2",
     "jest": "^29.7.0",
+    "rollup": "^4.9.4",
+    "tslib": "^2.6.2",
     "typescript": "^5.1.6"
   }
 }
